<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/imageView_obverse"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <ImageView
        android:id="@+id/imageView_reverse"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="6dp"
        android:layout_marginBottom="6dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_obverse"
        app:layout_constraintVertical_bias="0.085"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/textView_label_Mint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="40dp"
        android:text="@string/mint"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_obverse"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="24dp"
        android:text="Material"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_label_Material"
        app:layout_constraintTop_toBottomOf="@+id/textView_mint" />

    <TextView
        android:id="@+id/textView_label_Denomination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:text="@string/denomination"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_reverse"
        app:layout_constraintTop_toBottomOf="@+id/textView_number" />

    <TextView
        android:id="@+id/textView_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="Number"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_label_Number"
        app:layout_constraintTop_toBottomOf="@+id/textView_material" />

    <TextView
        android:id="@+id/textView_mint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:text="Mint"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_label_Mint"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_denomination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:text="Denomination"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView_label_Denomination"
        app:layout_constraintTop_toBottomOf="@+id/textView_number" />

    <TextView
        android:id="@+id/textView_label_Material"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="24dp"
        android:text="@string/material"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_obverse"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_Mint" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="10dp"
        android:text="@string/id"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_obverse"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_label_Number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/number"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/imageView_reverse"
        app:layout_constraintTop_toBottomOf="@+id/textView_label_Material" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="1000dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="........................................................................................................................................................."
        android:textColor="@android:color/holo_red_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_reverse" />

    <TextView
        android:id="@+id/textView_ID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:text="ID"
        android:textSize="18sp"
        app:layout_constraintStart_toEndOf="@+id/textView5"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>